--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
-    "react-bootstrap-country-select": "^0.7.12",
     "react-bootstrap-icons": "^1.3.0",
+    "react-country-region-selector": "^3.0.2",
     "react-credit-card-input": "^1.1.5",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
